#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([xserver], [0.1], [xdsecret1@gmail.com])
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([login/main.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([login/Makefile 
           character/Makefile
           Makefile])
